@@ -318,6 +318,8 @@ LISPSYM(hash_table_iterator,"HASH-TABLE-ITERATOR",system)
 LISPSYM(hash_table_iterate,"HASH-TABLE-ITERATE",system)
 LISPSYM(hash_table_weak_p,"HASH-TABLE-WEAK-P",ext)
 LISPSYM(set_hash_table_weak_p,"%SET-HASH-TABLE-WEAK-P",system)
+LISPSYM(hash_table_warn_if_needs_rehash_after_gc,"HASH-TABLE-WARN-IF-NEEDS-REHASH-AFTER-GC",ext)
+LISPSYM(set_hash_table_warn_if_needs_rehash_after_gc,"%SET-HASH-TABLE-WARN-IF-NEEDS-REHASH-AFTER-GC",system)
 LISPSYM(class_gethash,"CLASS-GETHASH",clos)
 LISPSYM(class_tuple_gethash,"CLASS-TUPLE-GETHASH",clos)
 LISPSYM(sxhash,"SXHASH",lisp)
