@@ -425,6 +425,8 @@ LISPFUNNR(hash_table_iterator,1)
 LISPFUNN(hash_table_iterate,1)
 LISPFUNNR(hash_table_weak_p,1)
 LISPFUNN(set_hash_table_weak_p,2)
+LISPFUNNR(hash_table_warn_if_needs_rehash_after_gc,1)
+LISPFUNN(set_hash_table_warn_if_needs_rehash_after_gc,2)
 LISPFUNN(class_gethash,2)
 LISPFUN(class_tuple_gethash,seclass_default,2,0,rest,nokey,0,NIL)
 LISPFUNN(sxhash,1)
